Minor formatting changes in the Options dialog

--- a/stdm/ui/ui_options.ui
+++ b/stdm/ui/ui_options.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>626</width>
+    <width>710</width>
     <height>631</height>
    </rect>
   </property>
@@ -38,9 +38,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-16</y>
-        <width>796</width>
-        <height>574</height>
+        <y>0</y>
+        <width>692</width>
+        <height>576</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -73,16 +73,7 @@
              <enum>QFrame::Raised</enum>
             </property>
             <layout class="QGridLayout" name="gridLayout_2">
-             <property name="leftMargin">
-              <number>0</number>
-             </property>
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="rightMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
+             <property name="margin">
               <number>0</number>
              </property>
              <item row="0" column="0" rowspan="4">
@@ -250,7 +241,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Set current profile</string>
+            <string>Current profile</string>
            </property>
           </widget>
          </item>
@@ -318,6 +309,12 @@
        </item>
        <item row="9" column="0">
         <widget class="QLabel" name="label_9">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string>Upgrade STDM Configuration to 1.4</string>
          </property>
