--- a/stdm/ui/ui_options.ui
+++ b/stdm/ui/ui_options.ui
@@ -297,7 +297,7 @@
             </size>
            </property>
            <property name="maximum">
-            <number>1000000</number>
+            <number>100000</number>
            </property>
            <property name="singleStep">
             <number>10</number>
