--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -154,13 +154,6 @@
          </layout>
         </widget>
        </item>
-       <item row="10" column="0">
-        <widget class="QLabel" name="label_9">
-         <property name="text">
-          <string>Upgrade STDM Configuration to 1.4 </string>
-         </property>
-        </widget>
-       </item>
        <item row="7" column="0" colspan="5">
         <layout class="QGridLayout" name="gridLayout_6">
          <property name="verticalSpacing">
@@ -177,6 +170,36 @@
            </property>
           </widget>
          </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>Supporting documents folder:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="edtMapfile">
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="txtRepoLocation">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>25</height>
+            </size>
+           </property>
+           <property name="maxLength">
+            <number>500</number>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
          <item row="1" column="1">
           <widget class="QSpinBox" name="edtEntityRecords">
            <property name="minimumSize">
@@ -187,29 +210,12 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="lblMapFile">
-           <property name="text">
-            <string>Import Map File</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_6">
-           <property name="text">
-            <string>Supporting documents folder</string>
-           </property>
-          </widget>
-         </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_10">
            <property name="text">
-            <string>Entity browser records limit</string>
+            <string>Entity browser records limit:</string>
            </property>
           </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QLineEdit" name="edtMapfile"/>
          </item>
          <item row="0" column="2">
           <widget class="QToolButton" name="btn_supporting_docs">
@@ -231,42 +237,22 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="txtRepoLocation">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>25</height>
-            </size>
-           </property>
-           <property name="maxLength">
-            <number>500</number>
-           </property>
-           <property name="readOnly">
-            <bool>true</bool>
+         <item row="2" column="0">
+          <widget class="QLabel" name="lblMapFile">
+           <property name="text">
+            <string>Root Import Map File:</string>
            </property>
           </widget>
          </item>
          <item row="3" column="0">
-          <widget class="QLabel" name="label_11">
+          <widget class="QLabel" name="label_9">
            <property name="text">
-            <string>Support Docs Translation Path</string>
+            <string>Country of Enumeration:</string>
            </property>
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QLineEdit" name="edtTransPath"/>
-         </item>
-         <item row="3" column="2">
-          <widget class="QToolButton" name="btnTransPath">
-           <property name="text">
-            <string>...</string>
-           </property>
-           <property name="icon">
-            <iconset resource="../resources.qrc">
-             <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
-           </property>
-          </widget>
+          <widget class="QComboBox" name="cbCountry"/>
          </item>
         </layout>
        </item>
