Some basic UI enhancements

--- a/stdm/ui/wizard/ui_column_depend.ui
+++ b/stdm/ui/wizard/ui_column_depend.ui
@@ -1,126 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>dlgColumnDepend</class>
-    <widget class="QDialog" name="dlgColumnDepend">
-        <property name="windowModality">
-            <enum>Qt::WindowModal</enum>
-        </property>
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>358</width>
-                <height>296</height>
-            </rect>
-        </property>
-        <property name="contextMenuPolicy">
-            <enum>Qt::DefaultContextMenu</enum>
-        </property>
-        <property name="windowTitle">
-            <string>Column dependencies</string>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout">
-            <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_3">
-                    <property name="spacing">
-                        <number>0</number>
-                    </property>
-                    <item>
-                        <widget class="QLabel" name="label">
-                            <property name="maximumSize">
-                                <size>
-                                    <width>40</width>
-                                    <height>16777215</height>
-                                </size>
-                            </property>
-                            <property name="text">
-                                <string/>
-                            </property>
-                            <property name="alignment">
-                                <set>Qt::AlignCenter</set>
-                            </property>
-                        </widget>
-                    </item>
-                    <item>
-                        <widget class="QLabel" name="qryLabel">
-                            <property name="font">
-                                <font>
-                                    <pointsize>8</pointsize>
-                                    <weight>50</weight>
-                                    <bold>false</bold>
-                                </font>
-                            </property>
-                            <property name="text">
-                                <string>The following items depend on the '%s' column;
-                                    deleting it might affect the data stored in these dependent
-                                    objects and in some cases, might also lead to their deletion.
-                                    Click 'Delete column' to proceed.
+ <class>dlgColumnDepend</class>
+ <widget class="QDialog" name="dlgColumnDepend">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>399</width>
+    <height>296</height>
+   </rect>
+  </property>
+  <property name="contextMenuPolicy">
+   <enum>Qt::DefaultContextMenu</enum>
+  </property>
+  <property name="windowTitle">
+   <string>Column dependencies</string>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="qryLabel">
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>The following items depend on the '%1' column;
+ deleting it might affect the data stored in these dependent
+ objects and in some cases, might also lead to their deletion.
+
+ Click 'Delete column' to proceed.
                                 </string>
-                            </property>
-                            <property name="textFormat">
-                                <enum>Qt::PlainText</enum>
-                            </property>
-                            <property name="wordWrap">
-                                <bool>true</bool>
-                            </property>
-                        </widget>
-                    </item>
-                </layout>
-            </item>
-            <item>
-                <widget class="QTreeWidget" name="twEntityDepend">
-                    <attribute name="headerVisible">
-                        <bool>false</bool>
-                    </attribute>
-                    <column>
-                        <property name="text">
-                            <string notr="true">1</string>
-                        </property>
-                    </column>
-                </widget>
-            </item>
-            <item>
-                <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,1">
-                    <item>
-                        <spacer name="horizontalSpacer">
-                            <property name="orientation">
-                                <enum>Qt::Horizontal</enum>
-                            </property>
-                            <property name="sizeHint" stdset="0">
-                                <size>
-                                    <width>165</width>
-                                    <height>20</height>
-                                </size>
-                            </property>
-                        </spacer>
-                    </item>
-                    <item>
-                        <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
-                            <property name="sizeConstraint">
-                                <enum>QLayout::SetFixedSize</enum>
-                            </property>
-                            <property name="rightMargin">
-                                <number>0</number>
-                            </property>
-                            <item>
-                                <widget class="QPushButton" name="btnCancel">
-                                    <property name="text">
-                                        <string>Cancel</string>
-                                    </property>
-                                </widget>
-                            </item>
-                            <item>
-                                <widget class="QPushButton" name="btnDelete">
-                                    <property name="text">
-                                        <string>Delete column</string>
-                                    </property>
-                                </widget>
-                            </item>
-                        </layout>
-                    </item>
-                </layout>
-            </item>
-        </layout>
+       </property>
+       <property name="textFormat">
+        <enum>Qt::PlainText</enum>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QTreeWidget" name="twEntityDepend">
+     <attribute name="headerVisible">
+      <bool>false</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string notr="true">1</string>
+      </property>
+     </column>
     </widget>
-    <connections/>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,1">
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>165</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetFixedSize</enum>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="btnCancel">
+         <property name="text">
+          <string>Cancel</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnDelete">
+         <property name="text">
+          <string>Delete column</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
