--- a/ui/ui_document_downloader_win.ui
+++ b/ui/ui_document_downloader_win.ui
@@ -15,9 +15,6 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_4">
-    <property name="spacing">
-     <number>6</number>
-    </property>
     <item>
      <widget class="QTabWidget" name="twDocument">
       <property name="currentIndex">
@@ -342,6 +339,48 @@
          </widget>
         </item>
         <item>
+         <widget class="QGroupBox" name="groupBox_3">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>60</height>
+           </size>
+          </property>
+          <property name="title">
+           <string>Data Source:</string>
+          </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_7">
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_6">
+             <item>
+              <widget class="QLabel" name="label_16">
+               <property name="text">
+                <string>Filename (CSV) :</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="edtUploadFile"/>
+             </item>
+             <item>
+              <widget class="QPushButton" name="btnUploadFile">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>25</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>Browse ...</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
          <widget class="QGroupBox" name="groupBox_4">
           <property name="title">
            <string>Local Documents Folder:</string>
@@ -468,6 +507,68 @@
              </item>
              <item row="3" column="4">
               <widget class="QPushButton" name="btnScannedIdDoc">
+               <property name="text">
+                <string>Browse ...</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <widget class="QLabel" name="label_14">
+               <property name="text">
+                <string>Family Photo:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="1">
+              <widget class="QLineEdit" name="edtScannedFamilyPhoto"/>
+             </item>
+             <item row="4" column="3">
+              <widget class="QToolButton" name="tbScannedFamilyPhoto">
+               <property name="text">
+                <string>...</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="4">
+              <widget class="QPushButton" name="btnScannedFamilyPhoto">
+               <property name="text">
+                <string>Browse ...</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="2">
+              <widget class="QCheckBox" name="cbScannedFamilyPhoto">
+               <property name="text">
+                <string>Upload</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="0">
+              <widget class="QLabel" name="label_15">
+               <property name="text">
+                <string>Signature:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="1">
+              <widget class="QLineEdit" name="edtScannedSignature"/>
+             </item>
+             <item row="5" column="2">
+              <widget class="QCheckBox" name="cbScannedSignature">
+               <property name="text">
+                <string>Upload</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="3">
+              <widget class="QToolButton" name="tbScannedSignature">
+               <property name="text">
+                <string>...</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="4">
+              <widget class="QPushButton" name="btnScannedSignature">
                <property name="text">
                 <string>Browse ...</string>
                </property>
